@@ -2,9 +2,11 @@ package com.evolve.alpaca.importing.importDbf;
 
 import com.evolve.alpaca.importing.importDbf.domain.DbfAccount;
 import com.evolve.alpaca.importing.importDbf.domain.DbfPerson;
+import com.evolve.domain.Account;
 import com.evolve.domain.Person;
 import com.evolve.alpaca.importing.event.DbfImportCompletedEvent;
 import com.evolve.alpaca.importing.importDbf.fixers.PersonFixer;
+import com.evolve.services.AccountsService;
 import com.evolve.services.PersonsService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -24,10 +26,11 @@ public class ImportDbfService {
     private final ApplicationEventPublisher applicationEventPublisher;
     private final PersonsService personsService;
     private final PersonFixer personFixer;
+    private final AccountsService accountsService;
 
-    public void startImport(String filePath) {
+    public void startImport(String personsFilePath, String accountsFilePath) {
         final List<DbfPerson> osobyDbf = new ImportPersonDbf()
-                .performImport(filePath)
+                .performImport(personsFilePath)
                 .getItems();
 
         final List<Person> persons = new PersonsFactory().from(osobyDbf)
@@ -37,26 +40,23 @@ public class ImportDbfService {
 
         personsService.insertPersons(persons);
 
+        importAccounts(accountsFilePath);
+
         final DbfImportCompletedEvent customSpringEvent = new DbfImportCompletedEvent(this,
                 "import completed for " + osobyDbf.size() + " entries");
         applicationEventPublisher.publishEvent(customSpringEvent);
     }
 
-    public void importAccounts(String filePath) {
-        final List<DbfAccount> osobyDbf = new ImportAccountDbf()
-                .performImport(filePath)
+    void importAccounts(String accountsFilePath) {
+        final List<DbfAccount> accountsDbf = new ImportAccountDbf()
+                .performImport(accountsFilePath)
                 .getItems();
 
-//        final List<Person> persons = new PersonsFactory().from(osobyDbf)
-//                .stream()
-//                .map(personFixer::fixData)
-//                .collect(Collectors.toList());
-//
-//        personsService.insertPersons(persons);
-//
-//        final DbfImportCompletedEvent customSpringEvent = new DbfImportCompletedEvent(this,
-//                "import completed for " + osobyDbf.size() + " entries");
-//        applicationEventPublisher.publishEvent(customSpringEvent);
+        final List<Account> accounts = accountsDbf.stream()
+                .map(AccountsFactory::from)
+                .toList();
+
+        accountsService.insertAccounts(accounts);
     }
 
 
